# ArtCade-Studio_V2

./: .git-commit-msg.txt  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  EARLY_ACCESS_RELEASE_NOTES.md  LICENSE  NEXT_STEPS.md  README.md  ROADMAP_INTEGRATIVA.md  THIRD_PARTY_NOTICES.md  build.ps1  package-lock.json  package.json  start-desktop.bat  start-desktop.ps1  start-webapp.bat  start-webapp.ps1
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/.cargo/: config.toml
editor/src-tauri/capabilities/: README.md  default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/resources/scripts/: bootstrap-runtime-libs.ps1
editor/src-tauri/src/: artcade_container.rs  atomic_project_write.rs  build_log_filter.rs  main.rs  native_input.rs  process_util.rs  project_paths.rs  project_write_paths.rs  sdk.rs  web_export_status.rs  web_preview.rs
runtime-cpp/: CMakeLists.txt  build-native.bat  build-wasm.bat  build_log.txt  build_native.bat  build_native_editor.bat  build_phase12.bat  build_wasm.bat  do_cmake.bat  run_native_editor.bat  run_runtime_core_tests.bat  wasm_log.txt
runtime-cpp/smoke-tests/: CMakeLists.txt  shell.html  smoke_1_render.cpp  smoke_2_input.cpp  smoke_3_notify.cpp  smoke_4_command.cpp
runtime-cpp/src/: main.cpp
runtime-cpp/src/app/: CMakeLists.txt
runtime-cpp/src/app/include/: app.h
runtime-cpp/src/app/render/: editor-overlay-renderer.cpp  editor-overlay-renderer.h  frame_coordinator.cpp  frame_coordinator.h  parallax-renderer.cpp  parallax-renderer.h  physics_debug_renderer.cpp  physics_debug_renderer.h  ray-tint-widget.cpp  ray-tint-widget.h  scene_frame_builder.cpp  scene_frame_context.h  scene_frame_snapshot.h  sprite_frame_resolve.cpp  sprite_frame_resolve.h  text_value_formatter.cpp  text_value_formatter.h  tilemap-renderer.cpp  tilemap-renderer.h
runtime-cpp/src/app/src/: app.cpp  app_bootstrap.cpp  app_loop.cpp  app_modules.h  app_project_lifecycle.cpp  app_scene_invalidation.cpp  app_scene_lifecycle.cpp  app_scene_mutation.cpp  app_scene_render.cpp  gameplay_host_ports.h  gameplay_session.cpp  gameplay_session.h  main.cpp
runtime-cpp/src/core/: asset-json.cpp  asset-json.h  collision-json.cpp  collision-json.h  engine-context.h  entity-json.cpp  entity-json.h  gameplay-runtime-host.h  json-primitives.cpp  json-primitives.h  module.h  object-type-materialize.cpp  object-type-materialize.h  physics-json.cpp  physics-json.h  project-current-format.cpp  project-current-format.h  project-defaults.h  project-global-variables-format.cpp  project-global-variables-format.h  project-meta-json.cpp  project-meta-json.h  runtime-profiler.h  scene-json.cpp  scene-json.h  sprite-draw-math.h  sprite-json.cpp  sprite-json.h  tilemap_grid.h  types.h
runtime-cpp/src/editor-native/: CMakeLists.txt
runtime-cpp/src/editor-native/app/: asset_import.cpp  asset_import.h  command_stack.h  editor_app.cpp  editor_coordinator.cpp  editor_coordinator.h  (+13 more)
runtime-cpp/src/engine/: audio.h  game-api.h  input.h  lua-host.h  physics.cpp  physics.h  renderer.cpp  renderer.h  types.h
runtime-cpp/src/game/: asset-loader.h  entity-manager.h  scene-manager.h  world.h
runtime-cpp/src/utils/: logger.h
runtime-cpp/src/world/: CMakeLists.txt
runtime-cpp/test-project/: project.json
runtime-cpp/test-project/logs/: state_save_test.txt  stdout_30s.txt  stdout_8s.txt
runtime-cpp/test-project/scripts/: main.lua  runtime_core_smoke.lua
runtime-cpp/tests/: CMakeLists.txt  artcade-crypto-test.cpp  artcade-package-test.cpp  asset-loader-test.cpp  asset-manifest-index-test.cpp  camera-clamp-test.cpp  camera-manager-test.cpp  collision-world-mask-test.cpp  compositor-layout-test.cpp  dialog-parser-test.cpp  editor-core-test.cpp  editor-zoom-policy-test.cpp  entity-collision-query-test.cpp  entity-signals-test.cpp  event-bus-test.cpp  frame-coordinator-test.cpp  frame-selection-test.cpp  game-api-state-test.cpp  game-state-test.cpp  gameplay-session-dependency-guard-test.cpp  gameplay-tick-order-characterization-test.cpp  layer-manager-test.cpp  logic-board-test.cpp  logic-components-test.cpp  lua-host-test.cpp  object-type-materialize-test.cpp  physics-body-rules-test.cpp  physics-json-test.cpp  physics-test.cpp  presentation-camera-modes-test.cpp  presentation-coordinate-mapper-test.cpp  presentation-golden-test.cpp  presentation-input-builder-test.cpp  presentation-integration-test.cpp  presentation-surface-metrics-test.cpp  presentation-system-test.cpp  presentation_test_helpers.h  project-json-parity-test.cpp  project-json-test.cpp  render_pipeline_test.cpp  (+21 more)
runtime-cpp/tests/fixtures/: project-v2-parity.json
runtime-cpp/tests/stubs/: raylib-stub.cpp  raylib.h
runtime-cpp/tools/: artcade_crypto.py  artcade_keytool.py  emit-asset-key-header.py  gen-asset-key.py  pack-artcade.py  publish-release.py  test_delta_update.py  test_pack_artcade.py  update-client.py
src/application/: CMakeLists.txt
src/application/src/: commands.cpp  editor_coordinator.cpp  game_variable_commands.cpp  game_variable_coordinator.cpp  logic_board_commands.cpp  logic_board_condition_commands.cpp  logic_board_names.cpp  logic_board_names.h  logic_board_property.cpp  logic_board_section_commands.cpp  object_type_component_commands.cpp  project_file_io.cpp  scene_layer_assignment.cpp  scene_layer_commands.cpp  scene_layer_coordinator.cpp  scene_layer_duplicate.cpp  scene_layer_remove.cpp  scene_layer_support.cpp  scene_layer_support.h
src/qt/: CMakeLists.txt
src/qt/app/: main.cpp
src/qt/bridge/: assets_model.cpp  assets_model.h  console_model.cpp  console_model.h  editor_session.cpp  editor_session.h  editor_session_variables.cpp  hierarchy_model.cpp  hierarchy_model.h  layers_model.cpp  layers_model.h  logic_catalog_metadata.cpp  logic_catalog_metadata.h  logic_catalog_model.cpp  logic_catalog_model.h  play_process_host.cpp  play_process_host.h  scene_view_item.cpp  scene_view_item.h  scene_view_item_input.cpp  scene_view_item_keyboard.cpp  variables_model.cpp  variables_model.h
(+1336 files in other folders)
