[package]
name    = "artcade-editor"
version = "2.0.0"
edition = "2021"
description = "ArtCade V2 Editor — Tauri shell"
default-run = "artcade-editor"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs    = "2"
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"

[[bin]]
name = "artcade-editor"
path = "src/main.rs"
